force-app/main/default/objects/Pay_Period__c/fields/Fiscal_Year__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Year__c</fullName>
    <label>Fiscal Year</label>
    <referenceTo>Fiscal_Year__c</referenceTo>
    <relationshipLabel>Pay Periods</relationshipLabel>
    <relationshipName>Pay_Periods</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>