force-app/main/default/objects/Pay_Period__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location</label>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>Pay Periods</relationshipLabel>
    <relationshipName>Pay_Periods</relationshipName>
    <type>Lookup</type>
</CustomField>