force-app/main/default/objects/Pay_Period__c/fields/Office_Location__c.field-meta.xml
<CustomField>
    <fullName>Office_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Office Location</label>
    <referenceTo>Office_Location__c</referenceTo>
    <relationshipLabel>Pay Periods</relationshipLabel>
    <relationshipName>Pay_Periods</relationshipName>
    <type>Lookup</type>
</CustomField>