force-app/main/default/objects/Pay_Period__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Fiscal_Year__c</columns>
    <columns>Office_Location__c</columns>
    <columns>Pay_Period_Type__c</columns>
    <columns>Pay_Date__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>